--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>TESTE GIT-HUB</h1>
     <p>Olá, Mundo!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, voluptatibus! Perspiciatis esse possimus, similique sed odio quasi quia ea officiis molestiae sint. Tempora, nostrum sequi ex fugiat molestias quae quas!</p>
 </body>
 </html>
